change to text from kappa

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 == README
 
-Thiszzzz README would normally document whatever steps are necessary to get the
+This-Kappa README would normally document whatever steps are necessary to get the
 application up and running.
 
 Things you may want to cover:
