text changed by bemi

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 == README
 
-This-Kappa README would normally document whatever steps are necessary to get the
+This-Bemi README would normally document whatever steps are necessary to get the
 application up and running.
 
 Things you may want to cover:
