--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,8 @@
 == README
 
-Thisss README would normally document whatever steps are necessary to get the
+Change from new branch testing
+
+This README would normally document whatever steps are necessary to get the
 application up and running.
 
 Things you may want to cover:
